--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,9 +3,9 @@
  Editing Book
 </strong>
 </h3>
-<%= form_with model: @book do |f| %>
+
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -20,7 +20,7 @@
   <h4>Body</h4>
   <%= f.text_area :body %><br>
 
-  <%= f.submit 'Create Book' %>
+  <%= f.submit 'Update Book' %>
 
 <% end %>
 
