--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,8 +12,8 @@
       <td><%= book.title %></td>
       <td><%= book.body %></td>
        <td><%= link_to "Show", book_path(book.id) %></td>
-        <td><%= link_to "edit", edit_book_path(book.id) %></td>
-      <td><%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" =>"Are you sure?" %></td>
+       <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+       <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" =>"Are you sure?" %></td>
      </tr>
     <% end %>
   </tbody>
@@ -21,7 +21,7 @@
 
 <h3> New Book</h3>
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
